--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
-DJANGO_SECRET_KEY = 'your-secret-key-here'
+DJANGO_SECRET_KEY = 'gjyt-_jc%vhto&d-hpwioz=1o_dn(c6yvkp1u-a$9!na!+tpg_'
 DJANGO_ALLOWED_HOSTS = '*'
 DJANGO_DEBUG = 'True'
-DJANGO_ENV = 'local|dev|staging|prod'
+DJANGO_ENV = 'dev'
 
 DATABASE_ENGINE = 'django.db.backends.postgresql'
-DATABASE_NAME = 'your_database_name'
-DATABASE_USER = 'your_database_user'
-DATABASE_PASSWORD = 'your_database_password'
-DATABASE_HOST = 'localhost'
+DATABASE_NAME = 'reportwelldb'
+DATABASE_USER = 'postgres'
+DATABASE_PASSWORD = '123456789'
+DATABASE_HOST = 'db'
 DATABASE_PORT = '5432'
 
-AWS_ACCESS_KEY_ID = 'your_aws_access_key_id'
-AWS_SECRET_ACCESS_KEY = 'your_aws_secret_access_key'
-AWS_STORAGE_BUCKET_NAME = 'reportwell-files'
-AWS_S3_REGION_NAME = 'us-east-1'
-AWS_S3_EXPIRATION_TIME = '600'
-DEFAULT_FILE_STORAGE = 'storages.backends.s3boto3.S3Boto3Storage'
-DYNAMODB_TABLE_NAME = 'notifications' 
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+AWS_ENDPOINT_URL=http://localstack:4566
+DYNAMODB_ENDPOINT_URL=http://localstack:4566
+S3_ENDPOINT_URL=http://localstack:4566
 
 TWILIO_ACCOUNT_SID = 'your_twilio_account_sid'
 TWILIO_API_KEY = 'your_twilio_auth_token'
@@ -26,5 +26,3 @@ SENDGRID_API_KEY = 'your_auth_token'
 DEFAULT_FROM_EMAIL = 'default_email'
 MESSAGE_EMAIL_DELAY = 10
 
-REDIS_HOST = '0.0.0.0'
-REDIS_PORT = '6379'
